add missing commas

--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Chau</title>
-    <script src="custom.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
@@ -81,8 +80,8 @@
         /* Footer */
         footer {
             background-color: #F2DFD7;
-            padding-top padding-bottom: 20px;
-            padding-left padding-right: 30px;
+            padding-top, padding-bottom: 20px;
+            padding-left, padding-right: 30px;
             color: black;
             text-align: center;
             font-size: 0.8em;
@@ -196,10 +195,11 @@
         </div>
         </div>
     </main>
-<footer>
-    &copy; Emily Chau <x-fullyear></x-fullyear>
-    <br><x-formatline><x-footer></x-footer></x-formatline>
-    <br><x-formatpara><x-landback></x-landback></x-formatpara>
-</footer>
+    <footer>
+        &copy; Emily Chau <x-fullyear></x-fullyear>
+        <br><x-formatline><x-footer></x-footer></x-formatline>
+        <br><x-formatpara><x-landback></x-landback></x-formatpara>
+        <script src="custom.js"></script>
+    </footer>
 </body>
 </html>
