add left and right padding

--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@
         footer {
             background-color: #F2DFD7;
             color: black;
+            padding-left, padding-right: 30px;
         }
 
         /* Responsive CSS */
