--- a/about.html
+++ b/about.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
-        /* Reset some default styles */
-        body,
-        h1,
-        p {
-            margin: 0;
-            padding: 0;
-        }
-
         /* Set the font family */
         main{
             padding: 60px;
@@ -81,7 +73,7 @@
         footer {
             background-color: #F2DFD7;
             color: black;
-            padding-left, padding-right: 30px;
+            padding: 30px;
         }
 
         /* Responsive CSS */
