center footer text

--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
             background-color: #F2DFD7;
             color: black;
             padding: 30px;
+            text-align: center;
         }
 
         /* Responsive CSS */
