add line break in footer

--- a/about.html
+++ b/about.html
@@ -184,9 +184,11 @@
         </div>
     </main>
     <footer>
-        <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear>
-        <br/><x-footer></x-footer></x-formatline>
-        <br/><x-formatpara><x-landback></x-landback></x-formatpara>
+        <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
+            
+        <x-footer></x-footer></x-formatline> <br/>
+        
+        <x-formatpara><x-landback></x-landback></x-formatpara>
         <script src="custom.js"></script>
     </footer>
 </body>
