create div class center footer

--- a/about.html
+++ b/about.html
@@ -185,10 +185,10 @@
         </div>
     </main>
     <footer>
+        <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
-            
         <x-footer></x-footer></x-formatline> <br/>
-        
+        </div>
         <x-formatpara><x-landback></x-landback></x-formatpara>
         <script src="custom.js"></script>
     </footer>
