--- a/about.html
+++ b/about.html
@@ -79,6 +79,9 @@
         .center-footer {
             text-align: center;
         }
+        .paragraph-footer {
+            text-align: left;
+        }
 
         /* Responsive CSS */
         @media (max-width: 768px) {
@@ -190,7 +193,8 @@
     <footer>
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
-        <x-footer></x-footer></x-formatline> <br/>
+        <x-footer></x-footer></x-formatline> 
+        <br/>
         </div>
         <div class="paragraph-footer">
             <x-formatpara><x-landback></x-landback></x-formatpara>
