add bottom padding

--- a/about.html
+++ b/about.html
@@ -78,6 +78,7 @@
         }
         .center-footer {
             text-align: center;
+            padding-bottom: 5px;
         }
         .paragraph-footer {
             text-align: left;
@@ -194,7 +195,6 @@
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
         <x-footer></x-footer></x-formatline> 
-        <br/>
         </div>
         <div class="paragraph-footer">
             <x-formatpara><x-landback></x-landback></x-formatpara>
