add float center

--- a/about.html
+++ b/about.html
@@ -135,6 +135,7 @@
         #col-left {
         width: 30%;
         float: left;
+        float: center;
         padding-right: 10px;
         }
 
