--- a/about.html
+++ b/about.html
@@ -134,9 +134,9 @@
 
         #col-left {
         width: 30%;
-        float: left;
         float: center;
         padding-right: 10px;
+        padding: 30px 0;
         }
 
         .vl {
