--- a/about.html
+++ b/about.html
@@ -134,9 +134,8 @@
 
         #col-left {
         width: 30%;
-        float: center;
-        padding-right: 10px;
-        padding: 30px 0;
+        float: left;
+        text-align: center;
         }
 
         .vl {
