change to border right

--- a/about.html
+++ b/about.html
@@ -129,24 +129,23 @@
 
         .row{
             display: flex;
-            padding: 20px;
+            padding: 20px 0;
         }
 
-        #col-left {
+        .col-left {
         width: 30%;
         float: left;
-        text-align: center;
         }
 
         .vl {
             width: 20%;
             padding-left: 10px;
-            border-left: 3px solid grey;
+            border-right: 3px solid grey;
             height: 300px;
             padding-right: 10px;
         }
 
-        #col-right {
+        .col-right {
         width: 50%;
         float: right;
         padding-left: 10px;
