add more padding

--- a/about.html
+++ b/about.html
@@ -133,12 +133,13 @@
         }
 
         .col-left {
-        width: 30%;
+        width: 15%;
         float: left;
         padding-right: 10px;
+        padding-top: 60px;
         }
         .col-right {
-        width: 70%;
+        width: 85%;
         float: right;
         padding-left: 10px;
 
