--- a/index.html
+++ b/index.html
@@ -75,9 +75,16 @@
         /* Footer */
         footer {
             background-color: #F2DFD7;
-            color: #fff;
+            color: black;
             padding: 30px;
-            text-align: left
+            font-size: 0.8em;
+        }
+        .center-footer {
+            text-align: center;
+            padding-bottom: 15px;
+        }
+        .paragraph-footer {
+            text-align: left;
         }
 
         /* Responsive CSS */
@@ -168,8 +175,14 @@
             <div class="button"><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau">LinkedIn</a></div><br>
     </div>
     <footer>
-        <p style="color: #333; text-align: center; font-size: 0.8em">&copy; 2023 EC<br>designed with ♡ on treaty 4 & treaty 14 land</p> <br>
-        <p style="color: #333; font-size: 0.8em; text-align: left; padding-left: 60px; padding-right: 60px">I want to acknowledge the privilege I have to live and study on the territories traditionally occupied and cared for by Indigenous Peoples across Turtle Island. Laurier's campuses are located on the traditional territories of the Anishinabeg, Haudenosaunee and Attawandaron peoples. I am deeply grateful for the opportunity that I have to learn and grow on this land, which continues to be cared for by the First Peoples of Canada. </p>
+        <div class="center-footer">
+        <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
+        <x-footer></x-footer></x-formatline> 
+        </div>
+        <div class="paragraph-footer">
+            <x-formatpara><x-landback></x-landback></x-formatpara>
+        </div>
+        <script src="custom.js"></script>
     </footer>
 </body>
 
