create new home page

--- a/ux201.html
+++ b/ux201.html
@@ -161,8 +161,9 @@
     <header>
         <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu </a></li>
         <nav style="font-size: 1em; text-align: right">
-            <li><a href="about.html">about me</a></li>
+            <li><a href="#home.html"><strong>home</strong></a></li>
             <li><a href="#ux201"><strong>maker lab 1</strong></a></li>
+            <li><a href="about.html">about me</a></li>
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
         <br>
@@ -171,12 +172,14 @@
             <div class="column">
                 <h2>Group Maker Project 1</h2>
                 <div class="img"><img src="GMP1.jpg" width="250px" alt="Prototype of the first GLOW box presented in the Group Maker Project (GMP) 1">
+                    <figcaption>Project to "hack" the concept of a box.</figcaption>
                 </div>
             </div>
 
             <div class="column">
                 <h2>Group Maker Project 2</h2>
                 <div class="img"><img src="GMP2.jpg" width="250px" alt="Prototype of the GLOW Box 2.0 presented in the Group Maker Project (GMP) 2">
+                    <figcaption>Project to address a social issue of concern.</figcaption>
                 </div>
             </div>
         </div>
