--- a/home.html
+++ b/home.html
@@ -104,7 +104,15 @@
     </style>
 <body>
     <header>
-
+        <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <nav style="font-size: 1em; text-align: right">
+            <li><a href="#home.html"><strong>home</strong></a></li>
+            <li><a href="ux201.html">maker lab 1</a></li>
+            <li><a href="about.html">about me</a></li>
+            <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
+        </nav>
+        <br>
+        <h1>Emily Chau</h1>
     </header>
     <main>
         I'm a User Experience Design student at Laurier.
