--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
     <div class="container">
         <h2>just like the TTC, this site is under construction 🏗</h2>
         <div class="img"> <img src="TTC spoof poster.png" width="306px" class=center alt="Spoof of a TTC closure notice poster. It reads: Multi-day closure. Last updated Monday, October 9, 2023. No portfolio access on Line 5 between Mt. Dennis and Kennedy stations due to prolonged maintenance. Please use the finished side of Line 5. Employers requiring an immediate connection to my design portfolio, should email me directly.">
-        <p style="text-align: justify"> A spoof poster of the often seen TTC subway closure notices. </p>
-        <p style="text-align: justify"> Take a closer look and you'll see that it parallels my design</p>
-        <p style="text-align: justify">portfolio with the still-under-construction Eglinton LRT.</p></div><br>
+        <figcaption>
+            A spoof poster of the often seen TTC subway closure notices. Take a closer look and you'll see that it parallels my design portfolio with the still-under-construction Eglinton LRT. </figcaption>
             <h2 style="font-family: 'Hammersmith One', sans-serif">before you leave, take my (digital) card!<br></h2>
             <div class="button"><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau">LinkedIn</a></div><br>
     </div>
