add figcaption styling

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             padding-top, padding-bottom: 5px;
         }
 
+        figcaption{
+            font-size: 0.8em;
+            padding-left, padding-right: 30px;
+            padding-top, padding-bottom: 5px;
+        }
+
         /* Footer */
         footer {
             background-color: #F2DFD7;
