delete container class

--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
-        /* Reset some default styles */
-        body,
-        h1,
-        p {
-            margin: 0;
-            padding: 0;
-        }
-
         /* Set the font family */
         body {
             font-family: 'Montserrat', sans-serif;
@@ -39,14 +31,7 @@
             color: #333;
         }
 
-        /* Main content container */
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding-top, padding-left, padding-right: 10px;
-            padding-bottom: 70px;
-            text-align: left;
-        }
+        /* Main poster content */
         .poster {
             width: 306px;
             height: 396px;
@@ -98,12 +83,6 @@
             h1 {
                 font-size: 1.5em;
             }
-
-            .container {
-                padding-top, padding-left, padding-right: 10px;
-                padding-bottom: 50px;
-            }
-
             .cta {
                 padding: 10px 0;
                 text-align: center;
@@ -172,7 +151,7 @@
         <br>
         <h1>Emily Chau</h1>
     </header>
-    <div class="container">
+    <div class="poster">
         <h2>just like the TTC, this site is under construction 🏗</h2>
         <div class="img"> <img src="TTC spoof poster.png" width="306px" class=center alt="Spoof of a TTC closure notice poster. It reads: Multi-day closure. Last updated Monday, October 9, 2023. No portfolio access on Line 5 between Mt. Dennis and Kennedy stations due to prolonged maintenance. Please use the finished side of Line 5. Employers requiring an immediate connection to my design portfolio, should email me directly.">
         <figcaption>
