--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="ISOW Medfi.png">
-                <img src="ISOW Medfi.png" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
+                <img src="ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
               </a>
               <div class="desc">ISOW</div>
             </div>
@@ -189,7 +189,7 @@
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="VWR Sitemap.png">
-                <img src="VWR Sitemap.png" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
+                <img src="VWR Sitemap.jpg" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
               </a>
               <div class="desc">VWR</div>
             </div>
