rename image titles

--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
           <h1>Work Samples</h1>
           <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="ISOW Medfi.png">
                 <img src="ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
               </a>
               <div class="desc">ISOW</div>
@@ -179,7 +178,6 @@
           
           <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="New Guide Exp Map.png">
                 <img src="New Guide Exp Map.png" alt="New Guide, Generative Research Project" width="600" height="400">
               </a>
               <div class="desc">New Guide</div>
@@ -188,8 +186,7 @@
           
           <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="VWR Sitemap.png">
-                <img src="VWR Sitemap.jpg" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
+                <img src="VWR Sitemap.png" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
               </a>
               <div class="desc">VWR</div>
             </div>
