--- a/index.html
+++ b/index.html
@@ -154,11 +154,9 @@
             <li><a href="about.html">about me</a></li>
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
-        <br>
-        <h1>Emily Chau</h1>
     </header>
     <main>
-          <h1>Work Samples</h1>
+          <h1>work samples</h1>
           <div class="responsive">
             <div class="gallery">
                 <img src="ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
@@ -166,7 +164,6 @@
               <div class="desc">ISOW</div>
             </div>
           </div>
-          
           <div class="responsive">
             <div class="gallery">
               <a target="_blank" href="CoCo POS.png">
@@ -188,7 +185,7 @@
             <div class="gallery">
                 <img src="VWR Sitemap.png" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
               </a>
-              <div class="desc">VWR</div>
+              <div class="desc">Volunteer Waterloo Region Sitemap</div>
             </div>
           </div>
           
