--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </style>
 <body>
     <header>
-        <li><a href="#laurier" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <li><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="position: absolute; left: 20px">ux design @ wlu </a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a href="#home"><strong>home</strong></a></li>
             <li><a href="ux201.html">maker lab 1</a></li>
