--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
 </head>
 <body>
     <header>
-        <li><a href="https://wlu.ca/fla/ux" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <li><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="position: absolute; left: 20px">ux design @ wlu </a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a href="index.html">home</a></li>
             <li><a href="ux201.html">maker lab 1</a></li>
