--- a/ux201.html
+++ b/ux201.html
@@ -38,6 +38,7 @@
             font-size: 3em;
             color: #333;
             padding-bottom: 25px;
+            text-align: center;
         }
 
         /* Main content container */
