resync the css styles

--- a/ux201.html
+++ b/ux201.html
@@ -8,15 +8,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
-        /* Reset some default styles */
-        body,
-        h1,
-        p {
-            margin: 0;
-            padding: 0;
+        main{
+            padding: 60px;
         }
-
-        /* Set the font family */
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #fff;
@@ -24,6 +18,13 @@
             text-align: left;
         }
 
+        p{
+            font-family: 'Montserrat', sans-serif;
+            color: #333;
+            text-align: left;
+            font-size: 1em;
+
+        }
         /* Header styles */
         header {
             font-family: 'Montserrat', sans-serif;
@@ -37,7 +38,6 @@
             font-family: 'Hammersmith One', sans-serif;
             font-size: 3em;
             color: #333;
-            padding-bottom: 25px;
             text-align: center;
         }
 
@@ -49,11 +49,6 @@
             padding-bottom: 70px;
             text-align: left;
         }
-        .poster {
-            width: 306px;
-            height: 396px;
-            background-color: #EB8738;
-}
 
         /* Call to action section */
         .cta {
@@ -67,11 +62,10 @@
         }
 
         p {
-            font-size: 1.2em;
+            font-size: 1em;
             color: #777;
             text-align: left;
         }
-
         /* Footer */
         footer {
             background-color: #F2DFD7;
