--- a/ux201.html
+++ b/ux201.html
@@ -16,6 +16,7 @@
             background-color: #fff;
             color: #333;
             text-align: left;
+            padding-bottom: 20px;
         }
 
         p{
