define left and right padding

--- a/ux201.html
+++ b/ux201.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
         main{
-            padding: 60px;
+            padding-left, padding-right: 60px;
+            padding-bottom: 20px;
         }
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #fff;
             color: #333;
             text-align: left;
-            padding-bottom: 20px;
         }
 
         p{
