add sentence about socially responsible design

--- a/ux201.html
+++ b/ux201.html
@@ -178,8 +178,7 @@
                 </div>
             </div>
         </div>
-    </header>
-    <p></p>
+        <p>Inspiration for this critical making project was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
     <footer>
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
