--- a/ux201.html
+++ b/ux201.html
@@ -163,6 +163,7 @@
             <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
         </nav>
     </header>
+    <main>
         <h1>maker lab portfolio</h1>
         <div class="row">
             <div class="column">
@@ -179,6 +180,7 @@
             </div>
         </div>
         <p>Inspiration for this critical making project was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
+    </main>
     <footer>
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
