center align text

--- a/ux201.html
+++ b/ux201.html
@@ -178,8 +178,8 @@
                     <figcaption>Project to address a social issue of concern.</figcaption>
                 </div>
             </div>
-            <p>Inspiration for this critical making project was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
         </div>
+        <p style="text-align: center;">Inspiration for this critical making project was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
     </main>
     <footer>
         <div class="center-footer">
