--- a/ux201.html
+++ b/ux201.html
@@ -179,7 +179,7 @@
                 </div>
             </div>
         </div>
-        <p style="text-align: center;">Inspiration for this critical making project was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
+        <p style="text-align: center;">Inspiration for both critical making projects was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
     </main>
     <footer>
         <div class="center-footer">
