--- a/index.html
+++ b/index.html
@@ -161,15 +161,14 @@
             <div class="gallery">
                 <img src="ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
               </a>
-              <div class="desc">ISOW</div>
+              <div class="desc">ISOW Website Redesign</div>
             </div>
           </div>
           <div class="responsive">
             <div class="gallery">
-              <a target="_blank" href="CoCo POS.png">
                 <img src="CoCo POS.png" alt="Point of Sale Redesign, CoCo Fresh Tea and Juice" width="600" height="400">
               </a>
-              <div class="desc">Point of Sale Redesign</div>
+              <div class="desc">CoCo Point of Sale Redesign</div>
             </div>
           </div>
           
@@ -177,7 +176,7 @@
             <div class="gallery">
                 <img src="New Guide Exp Map.png" alt="New Guide, Generative Research Project" width="600" height="400">
               </a>
-              <div class="desc">New Guide</div>
+              <div class="desc">New Guide - Generative Research Project</div>
             </div>
           </div>
           
