add intro content

--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
         </nav>
     </header>
     <main>
+        <div class="row">
+            <div class="column">
+                <h1>Hi, I'm Emily! </h1>
+                <p>I'm a UX designer, community builder and proud Laurier Golden Hawk 💜💛 </p>
+                <br>
+                <p>Learning Cluster Advisor @ Laurier's Department of Residence</p>
+                <p>Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
+            </div>
+            <div class="column">
+
+            </div>
+        </div>    
           <h1>work samples</h1>
           <div class="responsive">
             <div class="gallery">
@@ -176,7 +188,7 @@
             <div class="gallery">
                 <img src="New Guide Exp Map.png" alt="New Guide, Generative Research Project" width="600" height="400">
               </a>
-              <div class="desc">New Guide - Generative Research Project</div>
+              <div class="desc">New Guide - A Generative Research Project</div>
             </div>
           </div>
           
