--- a/index.html
+++ b/index.html
@@ -158,10 +158,9 @@
     <main>
         <div class="row">
             <div class="column">
-                <h1>Hi, I'm Emily! </h1>
+                <h2 style>Hi, I'm Emily! </h2>
                 <p>I'm a UX designer, community builder and proud Laurier Golden Hawk 💜💛 </p>
-                <br>
-                <p>Learning Cluster Advisor @ Laurier's Department of Residence</p>
+                <p>Currently, a Learning Cluster Advisor @ Laurier's Department of Residence</p>
                 <p>Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
             </div>
             <div class="column">
