change alignment and font size

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         }
 
         h2 {
-            font-size: 1.5em;
-            text-align: center;
+            font-size: 4em;
+            text-align: left;
         }
 
         p {
@@ -158,7 +158,7 @@
     <main>
         <div class="row">
             <div class="column">
-                <h2 style>Hi, I'm Emily! </h2>
+                <h2>Hi, I'm Emily! </h2>
                 <p>I'm a UX designer, community builder and proud Laurier Golden Hawk 💜💛 </p>
                 <p>Currently, a Learning Cluster Advisor @ Laurier's Department of Residence</p>
                 <p>Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
