--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         }
 
         h2 {
-            font-size: 1.5em;
+            font-size: 3em;
             text-align: center;
+            padding-top: 30px;
         }
 
         p {
