update hr length

--- a/index.html
+++ b/index.html
@@ -160,13 +160,14 @@
         <div class="row">
             <div class="column">
                 <h1>Hi, I'm Emily! </h1>
-                <p>I'm a UX designer, community builder and proud first-generation university student. I am a second-year candidate for a degree in a Bachelor's of Design at Wilfird Laurier University. </p>
+                <p>I'm a UX designer, community builder and proud first-generation university student. 
+                I am a second-year candidate for a degree in a Bachelor's of Design at Wilfird Laurier University. </p>
                 <p>Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence</p>
                 <p>Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
             </div>
             <div class="column">
             </div>
-            <hr width="50%">
+            <hr width="30%">
         </div>    
           <h2>work samples</h2>
           <div class="responsive">
