add bullet points

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font-family: 'Montserrat', sans-serif;
             color: #333;
             text-align: left;
-            font-size: 1em;
+            font-size: 1.5em;
 
         }
 
@@ -163,11 +163,12 @@
                 <p>I'm a UX designer, community builder and proud first-generation university student.<br/>
                 I am a second-year candidate for a degree in a Bachelor's of Design at Wilfird Laurier University.</p>
                 <br>
-                <p>Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence</p>
-                <p>Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
+                <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence</p>
+                <p>&ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
             </div>
             <div class="column">
             </div>
+            <br/>
             <hr width="30%">
         </div>    
           <h2>work samples</h2>
