--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                 <p>I'm a UX designer, community builder and proud first-generation university student.<br/>
                 I am a second-year candidate for a degree in a Bachelor's of Design at Wilfird Laurier University.</p>
                 <br>
-                <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence</p>
-                <p>&ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
+                <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
+                &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
             </div>
             <div class="column">
             </div>
