change paragraph text colour

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #fff;
-            color: #333;
+            color: black;
             text-align: left;
         }
 
         p{
             font-family: 'Montserrat', sans-serif;
-            color: #333;
+            color: black;
             text-align: left;
-            font-size: 2em;
+            font-size: 1.5em;
 
         }
 
@@ -39,7 +39,7 @@
         h1 {
             font-family: 'Hammersmith One', sans-serif;
             font-size: 4em;
-            color: #333;
+            color: black;
             text-align: left;
         }
 
@@ -65,8 +65,8 @@
         }
 
         p {
-            font-size: 2em;
-            color: #777;
+            font-size: 1.5em;
+            color: black;
             text-align: left;
         }
 
