--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="column">
                 <h1>Hi, I'm Emily! </h1>
                 <p>I'm a UX designer, community builder and proud first-generation university student.<br/>
-                I am a second-year candidate for a degree in a Bachelor's of Design at Wilfird Laurier University.</p>
+                I am a second-year candidate for a degree in a Bachelor's of Design at Wilfrid Laurier University.</p>
                 <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
                 &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
             </div>
@@ -199,6 +199,11 @@
           <div class="clearfix"></div>          
     </main>
     <footer>
+        <nav>
+            <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau/">linkedin</a></li>
+            <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
+            <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a>
+        </nav>
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
         <x-footer></x-footer></x-formatline> 
