--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         .paragraph-footer {
             text-align: left;
         }
+        .links-footer {
+            text-align: right;
+        }
+
         /* Basic styling for the menu */
         ul {
             list-style: none;
@@ -199,11 +203,13 @@
           <div class="clearfix"></div>          
     </main>
     <footer>
-        <nav>
-            <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau/">linkedin</a></li>
-            <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
-            <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a>
-        </nav>
+        <div class="links-footer">
+            <nav>
+                <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau/">linkedin</a></li>
+                <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
+                <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a>
+            </nav>
+        </div>
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
         <x-footer></x-footer></x-formatline> 
