add in underline for footer links

--- a/about.html
+++ b/about.html
@@ -83,6 +83,11 @@
         .paragraph-footer {
             text-align: left;
         }
+        .links-footer {
+            text-align: right;
+            color: darkblue;
+            text-decoration: underline;
+        }
 
         /* Responsive CSS */
         @media (max-width: 768px) {
