--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         }
         .links-footer {
             text-align: right;
+            color: darkblue;
+            text-decoration: underline;
         }
 
         /* Basic styling for the menu */
