--- a/ux201.html
+++ b/ux201.html
@@ -81,6 +81,11 @@
         .paragraph-footer {
             text-align: left;
         }
+        .links-footer {
+            text-align: right;
+            color: darkblue;
+            text-decoration: underline;
+        }
 
         /* Responsive CSS */
         @media (max-width: 768px) {
@@ -182,6 +187,13 @@
         <p style="text-align: center;">Inspiration for both critical making projects was rooted in a sense of responsibility to create an ethical and socially responsible design.</p>
     </main>
     <footer>
+        <div class="links-footer">
+            <nav>
+                <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau/">linkedin</a></li>
+                <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
+                <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a>
+            </nav>
+        </div>
         <div class="center-footer">
         <x-formatline> &copy; Emily Chau <x-fullyear></x-fullyear> <br/>
         <x-footer></x-footer></x-formatline> 
