--- a/about.html
+++ b/about.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--comment attempt-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Chau</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
-        /* Set the font family */
         main{
             padding: 60px;
         }
