update header link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 <body>
     <header>
-        <li><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a href="#home"><strong>home</strong></a></li>
             <li><a href="ux201.html">maker lab 1</a></li>
@@ -20,21 +20,15 @@
         </nav>
     </header>
     <main>
-        <div class="row">
-            <div class="column">
-                <h1>Hi, I'm Emily! </h1>
-                <p>I'm a UX designer, community builder and proud first-generation university student.<br/>
-                I am a second-year candidate for a degree in a Bachelor's of Design at Wilfrid Laurier University.</p>
-                <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
-                &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
-            </div>
-            <div class="column">
-            </div>
-            <br/>
-            <hr width="30%">
-        </div>    
-          <h2>work samples</h2>
-          <div class="responsive">
+        <h1>Hi, I'm Emily! </h1>
+        <p>I'm a UX designer, community builder and proud first-generation university student.<br/>
+        I am a second-year candidate for a degree in a Bachelor's of Design at Wilfrid Laurier University.</p>
+        <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
+        &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
+        <hr width="30%"><br>
+        <h2>work samples</h2>
+
+        <div class="responsive">
             <div class="gallery">
                 <img src="ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
               </a>
