--- a/ux201.html
+++ b/ux201.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <li><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a href="index.html">home</a></li>
             <li><a href="#ux201"><strong>maker lab 1</strong></a></li>
