--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emily Chau</title>
+    <title>About | Emily Chau</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <li><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="position: absolute; left: 20px">ux design @ wlu </a></li>
+        <li><a href="index.html" style="position: absolute; left: 20px">☾✩ Emily Chau ☀</a></li>
         <nav style="font-size: 1em; text-align: right">
             <li><a href="index.html">home</a></li>
             <li><a href="ux201.html">maker lab 1</a></li>
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <h1>who's behind the designs?</h1>
+        <h1>Who's behind the designs?</h1>
         <h2>Emily (aka EC, @uxemilyy)</h2>
         <div class="row">
         <div class="col-left"><img src="headshot.png" width="200px" alt="Headshot picture of EC"></div>  
