--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Emily Chau</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="EC Fav.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
@@ -26,7 +27,7 @@
         <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
         &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
         <hr width="30%"><br>
-        <h2>work samples</h2>
+        <h2>Work Samples</h2>
 
         <div class="responsive">
             <div class="gallery">
