--- a/ux201.html
+++ b/ux201.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <h1>maker lab portfolio</h1>
+        <h1>Maker Lab Portfolio</h1>
         <div class="row">
             <div class="column">
                 <h2>Group Maker Project 1</h2>
