remove fav to resize

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         I am a second-year candidate for a degree in a Bachelor's of Design at Wilfrid Laurier University.</p>
         <p>&ensp;👉 Currently, the Game Changers' Learning Cluster Advisor @ Laurier's Department of Residence<br/>
         &ensp;👉 Previously, a Summer Experience Opportunity Student @ the Ontario Public Service </p>
-        <hr width="30%"><br>
+        <hr width="30%"><br/>
         <h2>Work Samples</h2>
 
         <div class="responsive">
