reupload fav & create img folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Emily Chau</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="EC Fav.png">
+    <link rel="icon" type="image/x-icon" href="imgs/EC Fav.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
@@ -31,14 +31,14 @@
 
         <div class="responsive">
             <div class="gallery">
-                <img src="ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
+                <img src="imgs/ISOW Medfi.jpg" alt="International Students Overcoming War (ISOW) Website Redesign" width="600" height="400">
               </a>
               <div class="desc">ISOW Website Redesign</div>
             </div>
           </div>
           <div class="responsive">
             <div class="gallery">
-                <img src="CoCo POS.png" alt="Point of Sale Redesign, CoCo Fresh Tea and Juice" width="600" height="400">
+                <img src="imgs/CoCo POS.png" alt="Point of Sale Redesign, CoCo Fresh Tea and Juice" width="600" height="400">
               </a>
               <div class="desc">CoCo Point of Sale Redesign</div>
             </div>
@@ -46,7 +46,7 @@
           
           <div class="responsive">
             <div class="gallery">
-                <img src="New Guide Exp Map.png" alt="New Guide, Generative Research Project" width="600" height="400">
+                <img src="imgs/New Guide Exp Map.png" alt="New Guide, Generative Research Project" width="600" height="400">
               </a>
               <div class="desc">New Guide - A Generative Research Project</div>
             </div>
@@ -54,7 +54,7 @@
           
           <div class="responsive">
             <div class="gallery">
-                <img src="VWR Sitemap.png" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
+                <img src="imgs/VWR Sitemap.png" alt="Sitemap of the Volunteer Waterloo Region (VWR) Site" width="600" height="400">
               </a>
               <div class="desc">Volunteer Waterloo Region Sitemap</div>
             </div>
