--- a/ux201.html
+++ b/ux201.html
@@ -25,13 +25,13 @@
         <div class="row">
             <div class="column">
                 <h2>Group Maker Project 1</h2>
-                <div class="img"><img src="GMP1.jpg" width="250px" alt="Prototype of the first GLOW box presented in the Group Maker Project (GMP) 1">
+                <div class="img"><img src="imgs/GMP1.jpg" width="250px" alt="Prototype of the first GLOW box presented in the Group Maker Project (GMP) 1">
                     <figcaption>Project to "hack" the concept of a box.</figcaption>
                 </div>
             </div>
             <div class="column">
                 <h2>Group Maker Project 2</h2>
-                <div class="img"><img src="GMP2.jpg" width="250px" alt="Second prototype of the GLOW box, presented in the Group Maker Project (GMP) 2">
+                <div class="img"><img src="imgs/GMP2.jpg" width="250px" alt="Second prototype of the GLOW box, presented in the Group Maker Project (GMP) 2">
                     <figcaption>Project to address a social issue of concern.</figcaption>
                 </div>
             </div>
