spread fav to all pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           
           <div class="responsive">
             <div class="gallery">
-                <img src="imgs/New Guide Exp Map.png" alt="New Guide, Generative Research Project" width="600" height="400">
+                <img src="" alt="New Guide, Generative Research Project" width="600" height="400">
               </a>
               <div class="desc">New Guide - A Generative Research Project</div>
             </div>
