--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <style>
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
