--- a/about.html
+++ b/about.html
@@ -30,8 +30,12 @@
         <div class="row">
         <div class="col-left"><img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC"></div>  
         <div class="col-right">
-            <p>My current interests are in social media culture and its intersection with accessibility and design. Some of my notable skills include an impressive working memory for bubble tea orders, and curation of music from the local Toronto indie-punk scene – to a varying degree of usefulness.</p>
-            <p>I believe that good design can bridge gaps in knowledge and experience. It can help to supplement typical communication and reach across language barriers. 
+            <p><strong>Hi there!</strong> Thanks for clicking to read more about ✨me.✨</p>
+
+            <p>My current interests are in social media culture and its intersection with accessibility and design. Some of my notable skills include an impressive working memory for bubble tea orders, distain for wearing my optometrist prescribed glasses, and curation of music from the local Toronto indie-punk scene – all to a varying degree of usefulness.</p>
+            <br/><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/50OUltSwhS1CuwTJFhMgoB?utm_source=generator" width="100%" height="100" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br/>
+            <p><strong>My design ethos</strong> is rooted in the desire to dismantle barriers to access and helping people to achieve their goals. </p>
+            <p>Good design can bridge gaps in knowledge and experience; it can reach across different barriers and help to supplement typical communication methods.<br/>
             A story: While teaching my 嫲嫲 maa4 maa4 (grandma) how to use the family iPad, I saw the impact of good and intuitive design. Without knowing the language or how to use a tablet, she got the hang of it. Before I could switch the language to Traditional Chinese, she found the camera app and even took some pictures without my help. This stuck with me, and without consciously knowing it, this kickstarted my studying design.</p>
             <p>I am also cautious and critical throughout the design process. The ”what-ifs” and contingency planning helps to propel-forth all the ideas leading up to the ideation phase. All in moderation of course, it helps to rein in the desire to immediately jump towards solutions. And of course, I design for functionality and positive impact. A good design job is a silent background player, not in it for the accolades or acknowledgements. I’d like to think of these as my forefront goals as a UX/UI Designer.</p>
         </div>
