--- a/about.html
+++ b/about.html
@@ -26,10 +26,11 @@
     </header>
     <main>
         <h1>Who's behind the designs?</h1>
-        <h2>Emily (aka EC, @uxemilyy)</h2>
         <div class="row">
-        <div class="col-left"><img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC"> 
-            <a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;">ux design @ wlu</a><br/>
+        <div class="col-left"><img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC" style="padding-bottom: 10px;"><br/>
+            <h2>Emily Chau</h2>
+            <p>aka EC @uxemilyy<br/>b.des candidate</p>
+            <a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;"> ux design @ wlu</a><br/>
         </div>  
         <div class="col-right">
             <p><strong>Hi there!</strong> Thanks for clicking to read more about ✨me.✨</p>
