--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
         h1 {
             text-align: center;
         }
+        h2 {
+            text-align: left;
+        }
     </style>
 </head>
 <body>
@@ -27,10 +30,9 @@
     <main>
         <h1>Who's behind the designs?</h1>
         <div class="row">
-        <div class="col-left"><img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC" style="padding-bottom: 10px;"><br/>
+        <div class="col-left"><img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC" style="padding-bottom: 5px;">
             <h2>Emily Chau</h2>
-            <p>aka EC @uxemilyy<br/>b.des candidate</p>
-            <a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;"> ux design @ wlu</a><br/>
+            <p>aka EC @uxemilyy<br/>b.des candidate<br/><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;"> ux design @ wlu</a></p>
         </div>  
         <div class="col-right">
             <p><strong>Hi there!</strong> Thanks for clicking to read more about ✨me.✨</p>
