--- a/about.html
+++ b/about.html
@@ -30,8 +30,9 @@
     <main>
         <h1>Who's behind the designs?</h1>
         <div class="row">
-        <div class="col-left"><img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC" style="padding-bottom: 5px;">
-            <h2>Emily Chau</h2>
+        <div class="col-left">
+            <img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC;">
+            <h2>❤ Emily Chau</h2>
             <p>aka EC @uxemilyy<br/>b.des candidate<br/><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;"> ux design @ wlu</a></p>
         </div>  
         <div class="col-right">
