--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
         h2 {
             text-align: left;
         }
+        span {
+            color: #A05EB5;
+        }
     </style>
 </head>
 <body>
@@ -32,7 +35,7 @@
         <div class="row">
         <div class="col-left">
             <img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC;">
-            <h2>❤ Emily Chau</h2>
+            <h2>&emsp;Emily Chau</h2>
             <p>aka EC @uxemilyy<br/>b.des candidate<br/><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;"> ux design @ wlu</a></p>
         </div>  
         <div class="col-right">
