--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             text-align: left;
         }
         span {
-            color: #A05EB5;
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -36,7 +36,7 @@
         <div class="col-left">
             <img src="imgs/headshot.png" width="200px" alt="Headshot picture of EC;">
             <h2>&emsp;Emily Chau</h2>
-            <p>&emsp;aka EC @uxemilyy<br/>&emsp;b.des candidate<br/><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux" style="text-decoration: underline;">&emsp;ux design @ wlu</a></p>
+            <p>&emsp;aka EC @uxemilyy<br/>&emsp;b.des candidate<br/><a target="_blank" rel="noopener" href="https://wlu.ca/fla/ux;">&emsp;<span>ux design @ wlu</span></a></p>
         </div>  
         <div class="col-right">
             <p><strong>Hi there!</strong> Thanks for clicking to read more about ✨me.✨</p>
