--- a/ux201.html
+++ b/ux201.html
@@ -47,7 +47,7 @@
             <nav>
                 <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/emilyy-chau/">linkedin</a></li>
                 <li><a target="_blank" rel="noopener" href="https://drive.google.com/file/d/1Yd8SdVtLsgx6c_43BD1fnmvev_x7_WLF/view?usp=sharing">resume</a></li>
-                <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a>
+                <li><a target="_blank" rel="noopener" href="mailto:emilychau.yvo@gmail.com">email</a></li><br/>
             </nav>
         </div>
         <div class="center-footer">
